Fix drawer display on mobile by using MobileSwipeContainer

--- a/platform-ui-skin/src/main/webapp/skin/less/_global.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/_global.less
@@ -1147,7 +1147,6 @@ hr {
 }
 .hide-scroll {
   overflow: hidden !important;
-  margin-right: 15px !important;
 }
 .text-color {
   color: @textColor !important;
